@@ -1,3 +1,11 @@
+2004-10-07  Michael Koch  <konqueror@gmx.de>
+
+	* java/awt/image/AffineTransformOp.java
+	(TYPE_BILINEAR): Initialize with 2.
+	* java/awt/print/Printable.java: Jalopied.
+	(PAGE_EXISTS): Initialize with 0;
+	(NO_SUCH_PAGE): Initialized with 1.
+
 2004-10-06  Jerry Quinn  <jlquinn@optonline.net>
 
 	* Makefile.am: Add BufferedImageFilter.java.
